Prevent 'People & Relationships' text overflow on topic selection grid for iOS + Chrome

--- a/src/components/css/IconChooserGrid.module.css
+++ b/src/components/css/IconChooserGrid.module.css
@@ -45,7 +45,7 @@
 	bottom: 0;
 	height: 4rem;
 	width: 100%;
-	padding: .5rem;
+	padding: .5rem 0;
 	border: 1px solid rgba(0, 0, 0, .2);
 	border-top-width: 2px;
 	background-color: rgba(0, 0, 0, .2);
